kubernetes/auth-https-nginx-ingress/auth-https-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-event-triangle-auth
  namespace: event-triangle
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Accept-Language'
    nginx.ingress.kubernetes.io/cors-max-age: '600'
    nginx.ingress.kubernetes.io/proxy-body-size: '12m'
    nginx.ingress.kubernetes.io/rewrite-target: '/'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth-eventtriangle.razumovsky.me
      secretName: razumovsky-me-tls
  rules:
    - host: auth-eventtriangle.razumovsky.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-triangle-auth-service
                port:
                  number: 80
